Ensure profile is right border aligned on khoj obsidian settings page
On wide screens it wasn't taking up the header wasn't taking up the
full width, so profile picture could hang out in the middle somewhere.

--- a/src/interface/obsidian/styles.css
+++ b/src/interface/obsidian/styles.css
@@ -1998,6 +1998,7 @@ button.reference-button:hover {
   align-items: center;
   /* Spread items to take available space */
   justify-content: space-between;
+  width: 100%;
 }
 
 .khoj-connect-settings-header-status {
